# lesdmgmt

./: DEPLOYMENT_GUIDE.md  Procfile  README.md  add_custom_headers.py  app.py  auth.py  config.py  create_admin.py  create_workspace.py  forms.py  migrate_column_lengths.py  migrations.py  models.py  passenger_wsgi.py  pyproject.toml  render-requirements.txt  render.yaml  requirements-render.txt  requirements.txt  requirements.txt.txt  sample_leads.csv  utils.py
instance/: users.db
routes/: admin.py  auth.py  setup.py  user.py
static/css/: custom.css  style.css
static/js/: app.js  dashboard.js  leads.js  reports.js  users.js  workspaces.js
templates/: admin.html  admin_fields.html  admin_header_mappings.html  admin_imports.html  admin_leads.html  admin_nav.html  admin_users.html  admin_workspaces.html  assign_lead.html  base.html  dashboard.html  error.html  header_mapping_form.html  layout.html  lead_form.html  login.html  register.html
templates/admin/: dashboard.html  leads.html  reports.html  users.html  workspaces.html
templates/setup/: access.html  complete.html  form.html  success.html
templates/user/: leads.html
