[tool.poetry]
name = "nextus-lead-management"
version = "1.0.0"
description = "Next US Lead Management System"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "2.3.3"
flask-login = "0.6.2"
flask-sqlalchemy = "3.1.1"
flask-wtf = "1.2.1"
email-validator = "2.1.0"
gspread = "5.12.0"
gunicorn = "21.2.0"
oauth2client = "4.1.3"
psycopg2-binary = "2.9.9"
sqlalchemy = "2.0.27"
werkzeug = "2.3.7"
wtforms = "3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"